Fix spacing for filter info text

--- a/src/client/styles/components/ItemsContainer.scss
+++ b/src/client/styles/components/ItemsContainer.scss
@@ -79,7 +79,7 @@ button.item-table-filters {
     display: inline-block;
     font-size: 1rem;
     font-weight: 600;
-    margin-bottom: 20px;
+    margin-bottom: 0;
     margin-top: 0;
     padding-right: 10px;
   }
