--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -159,6 +159,8 @@ select {
 }
 
 .nypl-basic-table {
+  margin-top: 20px;
+
   th, td {
     padding-right: 15px;
     width: 16%;
